--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.piotr.myapplication">
 
+
+    <!--<uses-permission android:name="com.example.piotr.myapplication.MY_PERMISSION"/>-->
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OptionActivity" />
+        <activity android:name=".OptionActivity" android:exported="true" android:enabled="true" />
         <activity android:name=".ListActivity"></activity>
     </application>
 
